# src/swagger-output.json
@@ -13,7 +13,18 @@
   "paths": {
     "/pedido/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Pedidos"
+        ],
+        "description": "Trae todos los datos de un pedido",
+        "parameters": [
+          {
+            "name": "estado",
+            "description": "Estado del pedido",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
@@ -259,7 +270,10 @@
     },
     "/productos/": {
       "get": {
-        "description": "",
+        "tags": [
+          "PRODUCTOS ✅ "
+        ],
+        "description": "obtiene la lista de productos",
         "parameters": [
           {
             "name": "categoria",
@@ -274,27 +288,42 @@
         }
       },
       "post": {
+        "tags": [
+          "CREAR UN PRODUCTO 🏷️"
+        ],
+        "summary": "crear un producto nuevo",
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Datos para crear un producto nuevo",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nombre": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "coca cola"
                 },
                 "categoria": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "bebida"
                 },
                 "precio": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 15
                 },
                 "disponible": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "true"
                 }
-              }
+              },
+              "required": [
+                "nombre",
+                "categoria",
+                "precio"
+              ]
             }
           }
         ],
@@ -309,6 +338,176 @@
       }
     },
     "/productos/{id}": {
+      "get": {
+        "tags": [
+          "PRODUCTOS ID 🔑"
+        ],
+        "description": "Obtiene la informacion de un producto en especifico por su id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID del producto a buscar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "ACTUALIZAR UN PRODUCTO 🧾"
+        ],
+        "summary": "actualizar un producto existente",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "id del producto a actualizar"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos a actualizar del producto",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre": {
+                  "type": "string",
+                  "example": "coca cola"
+                },
+                "categoria": {
+                  "type": "string",
+                  "example": "bebida"
+                },
+                "precio": {
+                  "type": "number",
+                  "example": 15
+                },
+                "disponible": {
+                  "type": "string",
+                  "example": "true"
+                }
+              },
+              "required": [
+                "nombre",
+                "categoria",
+                "precio"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "ELIMINAR UN PRODUCTO ❌"
+        ],
+        "summary": "eliminar un producto",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID del producto a eliminar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/repartidores/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "nombres",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Repartidores"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "descripcion": "Datos del nuevo repartidor",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre": {
+                  "type": "string",
+                  "example": "Felipe Arroyo"
+                },
+                "vehiculo": {
+                  "type": "string",
+                  "example": "Moto"
+                },
+                "telefono": {
+                  "type": "string",
+                  "example": "09258145"
+                },
+                "activo": {
+                  "type": "boolean",
+                  "example": true
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "descripcion": "Repartidor creado existosamente"
+          },
+          "400": {
+            "description": "Bad Request",
+            "descripcion": "Datos invalidos o faltantes"
+          }
+        }
+      }
+    },
+    "/repartidores/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -325,6 +524,82 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Repartidores"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "descripcion": "ID numerico del repartidor"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "descripcion": "Datos a actualizar",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "vehiculo": {
+                  "type": "string",
+                  "example": "Moto"
+                },
+                "telefono": {
+                  "type": "string",
+                  "example": "12875312"
+                },
+                "activo": {
+                  "type": "boolean",
+                  "example": false
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "descripcion": "Reprtidor actualizado"
+          },
+          "400": {
+            "description": "Bad Request",
+            "descripcion": "Datos de actulizacion invalidos"
+          },
+          "404": {
+            "description": "Not Found",
+            "descripcion": "Repartidor no encontrado"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Repartidores"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "descripcion": "ID numerico del repartidor"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "descripcion": "Reprtidor eliminado"
+          },
+          "404": {
+            "description": "Not Found",
+            "descripcion": "Repartidor no encontrado"
           }
         }
       }
